@@ -21,6 +21,7 @@
 
 #include "openturns/PersistentObjectFactory.hxx"
 #include "openturns/ClassifierImplementation.hxx"
+#include "openturns/TBB.hxx"
 
 BEGIN_NAMESPACE_OPENTURNS
 
@@ -31,7 +32,10 @@ static const Factory<ClassifierImplementation> Factory_ClassifierImplementation;
 /* Default constructor */
 ClassifierImplementation::ClassifierImplementation()
   : PersistentObject()
+  , inputSample_(0, 0)
+  , classes_(0)
   , verbose_(false)
+  , isParallel_(ResourceMap::GetAsBool("Classifier-Parallel"))
 {
   // Nothing to do
 }
@@ -43,6 +47,7 @@ ClassifierImplementation::ClassifierImplementation(const NumericalSample & input
   , inputSample_(inputSample)
   , classes_(classes)
   , verbose_(false)
+  , isParallel_(ResourceMap::GetAsBool("Classifier-Parallel"))
 {
   // Nothing to do
 }
@@ -60,15 +65,51 @@ UnsignedInteger ClassifierImplementation::classify(const NumericalPoint & inP) c
 }
 
 /* Classify a sample */
-Indices ClassifierImplementation::classify(const NumericalSample & inS) const
+struct ClassifyPolicy
+{
+  const NumericalSample & input_;
+  Indices & output_;
+  const ClassifierImplementation * p_classifier_;
+
+  ClassifyPolicy( const NumericalSample & input,
+                  Indices & output,
+                  const ClassifierImplementation * p_classifier)
+    : input_(input)
+    , output_(output)
+    , p_classifier_(p_classifier)
+  {}
+
+  inline void operator()( const TBB::BlockedRange<UnsignedInteger> & r ) const
+  {
+    for (UnsignedInteger i = r.begin(); i != r.end(); ++ i) output_[i] = p_classifier_->classify(input_[i]);
+  }
+
+}; /* end struct ClassifyPolicy */
+
+
+Indices ClassifierImplementation::classifyParallel(const NumericalSample & inS) const
+{
+  const UnsignedInteger size = inS.getSize();
+  Indices result(size);
+  const ClassifyPolicy policy(inS, result, this);
+  TBB::ParallelFor(0, size, policy);
+  return result;
+}
+
+Indices ClassifierImplementation::classifySequential(const NumericalSample & inS) const
 {
   const UnsignedInteger size = inS.getSize();
   Indices prediction(size);
-  for ( UnsignedInteger i = 0; i < size; ++ i )
-  {
+  for (UnsignedInteger i = 0; i < size; ++ i)
     prediction[i] = classify(inS[i]);
-  }
   return prediction;
+}
+
+Indices ClassifierImplementation::classify(const NumericalSample & inS) const
+{
+  if (isParallel_)
+    return classifyParallel(inS);
+  return classifySequential(inS);
 }
 
 /* Grade a point */
@@ -78,17 +119,71 @@ NumericalScalar ClassifierImplementation::grade(const NumericalPoint & inP, cons
 }
 
 /* Grade a sample */
+struct GradePolicy
+{
+  const NumericalSample & input_;
+  const Indices & classes_;
+  NumericalPoint & output_;
+  const ClassifierImplementation * p_classifier_;
+
+  GradePolicy( const NumericalSample & input,
+               const Indices & classes,
+               NumericalPoint & output,
+               const ClassifierImplementation * p_classifier)
+    : input_(input)
+    , classes_(classes)
+    , output_(output)
+    , p_classifier_(p_classifier)
+  {}
+
+  inline void operator()( const TBB::BlockedRange<UnsignedInteger> & r ) const
+  {
+    for (UnsignedInteger i = r.begin(); i != r.end(); ++ i) output_[i] = p_classifier_->grade(input_[i], classes_[i]);
+  }
+
+}; /* end struct GradePolicy */
+
+
+/* Grade a sample */
+NumericalPoint ClassifierImplementation::gradeTBB(const NumericalSample & inS,
+    const Indices & hClass) const
+{
+  const UnsignedInteger size = inS.getSize();
+  NumericalPoint result(size);
+  const GradePolicy policy(inS, hClass, result, this);
+  TBB::ParallelFor(0, size, policy);
+  return result;
+}
+
+NumericalPoint ClassifierImplementation::gradeSequential(const NumericalSample & inS,
+    const Indices & hClass) const
+{
+  const UnsignedInteger size = inS.getSize();
+  NumericalPoint grades(size);
+  for ( UnsignedInteger i = 0; i < size; ++ i )
+    grades[i] = grade(inS[i], hClass[i]);
+  return grades;
+}
+
 NumericalPoint ClassifierImplementation::grade(const NumericalSample & inS, const Indices & hClass) const
 {
   const UnsignedInteger size = inS.getSize();
   if ( size != hClass.getSize() )
     throw InvalidDimensionException(HERE) << "Input sample dimension (=" << size << ") and classes dimension (=" << hClass.getSize() << ") do not match.";
-  NumericalPoint grades(size);
-  for ( UnsignedInteger i = 0; i < size; ++ i )
-  {
-    grades[i] = grade(inS[i], hClass[i]);
-  }
-  return grades;
+  if (isParallel_)
+    return gradeTBB(inS, hClass);
+  return gradeSequential(inS, hClass);
+}
+
+/** Parallelization flag accessor */
+void ClassifierImplementation::setParallel(const Bool flag)
+{
+  isParallel_ = flag;
+}
+
+Bool ClassifierImplementation::isParallel() const
+{
+  return isParallel_;
 }
 
 /* String converter */
@@ -144,3 +239,4 @@ void ClassifierImplementation::load(Advocate & adv)
 
 
 END_NAMESPACE_OPENTURNS
+
