@@ -62,6 +62,7 @@ public:
   /** Operator () */
   using NumericalMathEvaluationImplementation::operator();
   NumericalPoint operator() (const NumericalPoint & inP) const;
+  NumericalSample operator() (const NumericalSample & inS) const;
 
   /** Accessor for input point dimension */
   UnsignedInteger getInputDimension() const;
